# claude-plasmids

./: .gitignore  CLAUDE.md  README.md  REVIEW_DRAFTS.md  conftest.py  environment.yml  package-lock.json  package.json  playwright.config.ts  pytest.ini  requirements.txt  run_mcp_server.sh
allen reference docs/: DRAFT - Plasmid_Design_Tool_Verification_Rubric.xlsx  [DRAFT] Plasmid Design Tool Verification Rubric.docx
app/: .gitignore  agent.py  app.py  batch.py  constructs.db  database.py  system_prompt.md
evals/: lab_bench.py  llm_judge.py  rubric.py  run_agent_evals.py  simulated_user.py  test_cases.py
plasmid-library-mcp/: README.md  add_backbone_sequences.py  add_sequences.py  pyproject.toml
plasmid-library-mcp/src/: addgene_integration.py  library.py  server.py
src/: addgene_integration.py  assembler.py  codon_tables.py  confidence.py  custom_annotations.py  fpbase_integration.py  genbank_export.py  genbank_utils.py  gg_denovo.py  library.py  literature.py  mutations.py  ncbi_integration.py  plasmid_intake.py  protein_analysis.py  references.py  restriction_utils.py  server.py  server_http.py  tools.py  upload.py  user_library.py  vendor_backbone.py
tests/: test_addgene_integration.py  test_annotation.py  test_assembler.py  test_confidence.py  test_database.py  test_gg_denovo.py  test_golden_gate.py  test_library.py  test_literature.py  test_mcp_server.py  test_mutations.py  test_ncbi.py  test_pipeline.py  test_protein_analysis.py  test_provenance.py  test_references.py  test_restriction_utils.py  test_upload.py  test_user_library.py
(+9 files in other folders)
