[project]
name = "plasmid-library-mcp"
version = "0.1.0"
description = "MCP server providing access to a curated plasmid backbone and insert library for expression vector design"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anthropic/Allen Institute Collaboration"}
]
keywords = ["mcp", "plasmid", "molecular-biology", "cloning", "expression-vector"]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
plasmid-library-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "library"]
